--- a/css/welcome.css
+++ b/css/welcome.css
@@ -124,7 +124,8 @@ main {
 }
 
 .section-work {
-	min-height: 80vh;
+	min-height: 70vh;
+    margin-bottom: 30px;
 	padding: 0 20px;
 }
 
@@ -172,6 +173,7 @@ main hr {
 /* ---- FOOTER ----- */
 
 footer {
+    
 	min-height: 12vh;
 	padding: 12px;
 	background-color: #37404A;
