--- a/css/welcome.css
+++ b/css/welcome.css
@@ -216,6 +216,25 @@ footer h4 {
 
 /* ---- MEDIA QUERIES ---- */
 
+@media screen and (max-width: 400px) {
+  .section-work article h3 {
+	width: 170px;
+  }
+  
+  footer h4 {
+	font-size: 0.8em;
+  }
+  
+  footer ul {
+	font-size: 2.5em;
+  }
+  
+  footer li {
+	margin: 0 14px;
+  }
+	
+}
+
 @media screen and (min-width: 600px) {
 
 	
