--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ nav {
 
 .mobile-nav-icon i {
 	display: block;
-	padding: 4px 15px;
+	padding: 5px 15px 3px 15px;
     font-size: 200%;
     color: #fff;
 }
