--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ nav {
 
 .mobile-nav-icon i {
     display: block;
-    padding: 6px 15px 2px 15px;
+    padding: 4px 15px;
     font-size: 200%;
     color: #fff;
 }
