Added in a working Mobile Nav

--- a/css/main.css
+++ b/css/main.css
@@ -103,8 +103,9 @@ header {
 	float: left;
 }
 
-nav {
+.header-nav-icon {
     height: 50px;
+    width: 50px;
 	float: right;
 	background-color: #00BCD4;
 }
@@ -117,6 +118,42 @@ nav {
     display: block;
     padding: 4px 15px;
     font-size: 200%;
+    color: #fff;
+}
+
+.main-nav {
+    display: none;
+    float: left;
+    width: 100%;
+    background-color: #272f38;
+    box-shadow: 0 2px 2px rgba(3, 15, 29, 0.5);
+}
+
+.main-nav li {
+    display: block;
+    border-top: 1px solid #00BCD4;
+    width: 100%;
+}
+
+.main-nav li:last-child {
+    border-bottom: 1px solid #00BCD4;
+}
+
+.main-nav li a {
+    display: inline-block;
+    width: 100%;
+    padding: 12px 16px;
+}
+
+.main-nav li a:hover {
+    background-color: #00BCD4;
+}
+
+.main-nav la a:link,
+.main-nav li a:visited {
+    display: inline-block;
+    border: 0;
+    font-size: 100%;
     color: #fff;
 }
 
@@ -308,6 +345,22 @@ footer h4 {
 
 /* ---- MEDIA QUERIES ---- */
 
+
+@media screen and (max-width: 360px) {
+  footer h4 {
+	font-size: 0.8em;
+  }
+  
+  footer ul {
+	font-size: 2.5em;
+  }
+  
+  footer li {
+	margin: 0 14px;
+  }
+}
+
+
 @media screen and (min-width: 600px) {
 
 	
@@ -318,10 +371,7 @@ footer h4 {
 }
 
 @media screen and (min-width: 900px) {
-	.header {
-		max-width: 900px;
-		margin: 0 auto;
-	}
+
 }
 
 @media screen and (min-width: 1200px) {
