--- a/css/main.css
+++ b/css/main.css
@@ -22,10 +22,6 @@ h3 {
     text-transform: uppercase;
 }
 
-p {
-
-}
-
 a,
 btn {
 	cursor: pointer;
@@ -35,11 +31,6 @@ btn {
 a:link,
 a:visited {
     text-decoration: none;
-
-}
-
-a:hover {
-
 }
 
 img {
@@ -80,7 +71,6 @@ aside {
 /* ---- HEADER ----- */
 
 header {
-	/* display: block; */
 	/* ---- STICKY HEADER ---- */
 	position: fixed;
 	top: 0;
@@ -88,19 +78,32 @@ header {
 	width: 100%;
 	/* ---- BASE HEADER ---- */
     height: 50px;
-	/* padding: 16px 15px; */
 	background-color: #37404A;
 	z-index: 1000;
-	/*
-	margin: 0 auto;
-	max-width: 900px;
-	*/
 }
 
 .header-title {
+    width: 225px;
 	height: 50px;
-	padding: 11px 15px;
 	float: left;
+}
+
+.header-title i {
+    float: left;
+    font-size: 2.1em;
+    padding: 3px 10px;
+    color: #37404A;
+    background-color: #a5b5c7;
+}
+
+.header-title i:hover {
+    color: #37404A;
+}
+
+.header-title h1 {
+    float: right;
+    padding: 10px 0;
+    margin-right: 15px;
 }
 
 .header-nav-icon {
@@ -131,6 +134,7 @@ header {
 
 .main-nav li {
     display: block;
+    height: 50px;
     border-top: 1px solid #00BCD4;
     width: 100%;
 }
@@ -142,6 +146,7 @@ header {
 .main-nav li a {
     display: inline-block;
     width: 100%;
+    height: 50px;
     padding: 12px 16px;
 }
 
@@ -169,52 +174,29 @@ aside {
 	background-color: #37404A;
 }
 
-aside img {
-	margin-top: 25px;
-	margin-bottom: 10px;
-	width: 150px;
-    height: 150px;
-    border-radius: 100%;
-	/* border: 2px solid #a5b5c7; */
-	/* border: 2px solid #fff; */
-	border: 3px solid #a5b5c7;
+.aside-header-title {
+    width: 100%;
+    background-color: #37404A;
+    height: 50px;
+    float: left;
 }
 
-.home {
-	margin: 0;
+.aside-header-title i {
+    float: left;
+    font-size: 2.1em;
+    padding: 3px 10px;
+    color: #37404A;
+    background-color: #a5b5c7;
 }
 
-aside a {
-	display: block;
-	margin-top: 20px;
-}
-
-aside hr {
-	text-align: center;
-	width: 220px;
-	/* margin: 0 auto 20px auto; */
-	margin: 0 auto 6px auto;
+.aside-header-title i:hover {
+    color: #37404A;
 }
 
 aside h1 {
-	font-size: 2.1em;
-}
-
-aside h2 {
-
-}
-
-.section-hr {
-	width: 100%;
-	margin: 6px 0 20px 0;
-}
-
-.section-underline {
-	width: 192px;
-}
-
-i {
-	color: #00BCD4;
+    float: right;
+    margin-right: 190px;
+    padding: 10px 0;
 }
 
 aside ul {
@@ -222,47 +204,81 @@ aside ul {
 	font-size: 1.5em;
 }
 
-
 aside li {
 	display: block;
 	margin: 0 20px;
 }
 
-.aside-nav a {
+.section-gallery {
+    display:inline-block;
+    min-height: 75%;
+    width: 100%;
+    padding-top: 10px;
+    background-color: #272f38;
+}
+
+.section-gallery article {
+    background-size: cover;
+    background-position: center;
+    max-width: 700px;
+    max-height: 160px;
+    margin-bottom: 10px;
+}
+
+#character {
+    background-image: url("../img/GalleryThumb_Character.jpg");
+}
+
+#props {
+  background-image: url("../img/GalleryThumb_Props.jpg");
+}
+
+#concept {
+  background-image: url("../img/GalleryThumb_Concept.jpg");
+}
+
+.gallery-text {
+	padding-top: 55px;
+	height: 160px;
+    
+}
+
+.inactive {
+	width: 300px;
+	margin: 0 auto;
+	padding: 11px 5px;
+	border: 2px solid #fff;
+	border-radius: 3px;
+	/* background-color: #00BCD4; */
+	color: #fff;
+}
+
+.active {
+    width: 300px;
+	margin: 0 auto;
+	padding: 11px 5px;
 	border: 2px solid #00BCD4;
 	border-radius: 3px;
-	padding: 10px;
-	color: #00BCD4;
-}
-
-.aside-nav a:hover {
 	background-color: #00BCD4;
 	color: #fff;
 }
-
-.aside-nav-active a {
-	background-color: #00BCD4;
-	color: #fff;
-}
-
-
-
-
-/*
-.btn-active {
-	background-color: #00BCD4;
-	color: #fff; 
-}
-*/
-
 
 /* ---- FOOTER ---- */
+
+.aside-footer {
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    width: 100%;
+    height: 116px;
+    background-color: #37404A;
+}
 
 footer ul {
 	position: absolute;
 	bottom: 50px;
 	width: 100%;
-	font-size: 3em;
+	font-size: 2.5em;
 	list-style: none;
 }
 
@@ -271,7 +287,9 @@ footer li {
 	display: inline-block;
 }
 
-aside i {
+aside i,
+aside i:link,
+aside i:visited {
 	color: #a5b5c7;
 }
 
@@ -295,17 +313,12 @@ footer h4 {
 	margin: 50px auto 0 auto;
 	max-width: 900px;
 	padding: 20px 20px 0 20px;
-	/*
-	border-left: 2px solid #37404A;
-	border-right: 2px solid #37404A;
-	*/
 }
 
 .section-work li {
 	display: block;
 	margin: 0 auto;
 	max-width: 900px;
-
 	margin-bottom: 28px;
 }
 
@@ -344,33 +357,31 @@ footer h4 {
 
 /* ---- MEDIA QUERIES ---- */
 
+@media screen and (max-width: 320px) {
+    .header-title {
+        width: auto;
+    }
+    
+    .header-title i {
+        display: none;
+    }
+    
+    .header-title h1 {
+        float: left;
+        padding-left: 10px;
+    }
+    
+}
+
 
 @media screen and (max-width: 360px) {
   footer h4 {
 	font-size: 0.8em;
   }
   
-  footer ul {
-	font-size: 2.5em;
-  }
-  
   footer li {
 	margin: 0 14px;
   }
-}
-
-
-@media screen and (min-width: 600px) {
-
-	
-}
-
-@media screen and (min-width: 700px) {    
-
-}
-
-@media screen and (min-width: 900px) {
-
 }
 
 @media screen and (min-width: 1200px) {
@@ -391,5 +402,19 @@ footer h4 {
 		max-width: none;
 		margin: 0 auto 0 400px;
 	}
+}
+
+/* ----------- L Laptop ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1440px) {
+      .section-gallery article {
+          max-height: 116px;
+      }
+      
+      .gallery-text {
+	       padding-top: 35px;
+      }
+
 }
 
