More Slight tweaks to some Mobile Clean up Issues

--- a/css/main.css
+++ b/css/main.css
@@ -121,8 +121,8 @@ header {
 .mobile-nav-icon i {
     display: block;
     height: 50px;
-    padding: 4px 15px;
-    font-size: 200%;
+    padding: 3px 15px;
+    font-size: 2.1em;
     color: #fff;
 }
 
@@ -289,15 +289,16 @@ footer li {
 	display: inline-block;
 }
 
-aside i,
-aside i:link,
-aside i:visited
-aside i:active {
+aside i {
 	color: #a5b5c7;
 }
 
 aside i:hover {
 	color: #fff;
+}
+
+aside i:active {
+    color: #a5b5c7;
 }
 
 footer h4 {
@@ -346,7 +347,6 @@ footer h4 {
 	bottom: 5px;
 }
 
-
 .work-footer i {
 	color: #a5b5c7;
 }
@@ -355,29 +355,14 @@ footer h4 {
 	color: #fff;
 }
 
+.work-footer i:active {
+    color: #a5b5c7;
+}
+
 /* ---- ABOUT ME ----- */
 
 
 /* ---- MEDIA QUERIES ---- */
-
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 667px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-      .header-title h1 {
-          padding-top: 11px;
-      }
-}
-
-@media only screen 
-  and (min-device-width: 414px) 
-  and (max-device-width: 736px)
-  and (-webkit-min-device-pixel-ratio: 3) {
-      .header-title h1 {
-          padding-top: 11px;
-      }
-      
-}
 
 @media screen and (max-width: 320px) {
     .header-title {
