--- a/css/welcome.css
+++ b/css/welcome.css
@@ -8,7 +8,7 @@
 
 body {
 	font-size: 16px;
-	font-family: Roboto, sans-serif;
+	font-family: "Bebas Neue", Roboto, sans-serif;
 	background-color: #fff;
 	color: #fff;
 }
@@ -17,7 +17,8 @@ a,
 h1,
 h2,
 h3 {
-    font-weight: 300;
+    font-weight: 600;
+    letter-spacing: 0.12em;
     text-transform: uppercase;
 }
 
@@ -59,10 +60,6 @@ section {
     text-align: center;
 }
 
-/* ---- HEADER ----- */
-
-
-
 /* ---- WELCOME ----- */
 
 .welcome {
@@ -70,7 +67,6 @@ section {
     background-size: cover;
     background-position: center;
 	height: 100vh;
-	/* min-height: 300px; */
 }
 
 .welcome-text {
@@ -83,31 +79,47 @@ section {
 	font-size: 2.1em;
 }
 
-.welcome a {
-	font-size: 1.25em;
+.welcome hr {
+    width: 239px;
+	border-color: #fff;
+    opacity: 0.5;
+	margin: 2px auto 4px auto;
 }
 
-.welcome h3,
-.welcome a {
-	font-size: 1.25em;
+.welcome h3 {
+    font-size: 1.25em;
+    margin: 8px 0 4px 0;
 }
 
-.btn {
-	margin: 20px 10px 0 10px;
-	display: inline-block;
-	padding: 11px 50px;
-	border: 2px solid #00BCD4;
-	border-radius: 3px;
-	/* color: #00CCCC; */
-	background-color: #00BCD4;
+.header-icon {
+    margin-top: 12px;
+    padding: 0 11px;
+    height: 26px;
+}
+
+.welcome-text-name {
+    height: 56px;
+    padding: 0 11px;
+    margin: 2px 0;
+}
+
+.welcome-text-role {
+    margin: 4px 0;
+    height: 37px;
+    padding: 0 11px;
+}
+
+.welcome a {
+    letter-spacing: 0.15em;
+	font-size: 1.4em;
 }
 
 .btn-ghost {
-	margin: 6px 10px;
+	margin: 10px 10px;
 	display: inline-block;
-	padding: 11px 24px;
+	padding: 11px 67px;
 	border: 2px solid #fff;
-	border-radius: 3px;
+    border-radius: 3px;
 	background-color: none;
 }
 
@@ -116,22 +128,16 @@ section {
 	border: 2px solid #00BCD4;
 }
 
-/* ---- FEATURED WORK ----- */
+/* ---- GALLERY ----- */
 
 main {
 	min-height: 100vh;
-
 }
 
-.section-work {
-	min-height: 70vh;
+.section-gallery {
+	min-height: 84vh;
     margin-bottom: 30px;
-	padding: 0 20px;
-}
-
-main h2 {
-	padding-top: 20px;
-
+	padding: 5px 20px 0 20px;
 }
 
 main hr {
@@ -140,7 +146,7 @@ main hr {
 	margin: 0 auto 20px auto;
 }
 
-.section-work article {
+.section-gallery article {
     background-size: cover;
     background-position: center;
     max-width: 700px;
@@ -160,39 +166,32 @@ main hr {
   background-image: url("../img/GalleryThumb_Concept.jpg");
 }
 
-.work-text {
+.gallery-text {
 	padding-top: 80px;
 	height: 200px;
 }
 
-.section-work article h3 {
+.section-gallery article h3 {
 	width: 300px;
 	margin: 0 auto;
 	padding: 11px 5px;
 	border: 2px solid #fff;
 	border-radius: 3px;
-	/* background-color: #00BCD4; */
 	color: #fff;
 }
-
-/* ---- GALLERY ----- */
-
-
-/* ---- ABOUT ME ----- */
-
 
 /* ---- FOOTER ----- */
 
 footer {
     position: relative;
     width: 100%;
-	min-height: 12vh;
+	min-height: 13vh;
 	padding: 12px;
 	background-color: #37404A;
 }
 
 footer ul {
-	font-size: 3em;
+	font-size: 2.5em;
 	list-style: none;
 }
 
@@ -215,11 +214,10 @@ footer h4 {
 	color: #a5b5c7;
 }
 
-
 /* ---- MEDIA QUERIES ---- */
 
 @media screen and (max-width: 360px) {
-  .section-work article h3 {
+  .section-gallery article h3 {
 	width: 170px;
   }
   
@@ -227,27 +225,9 @@ footer h4 {
 	font-size: 0.8em;
   }
   
-  footer ul {
-	font-size: 2.5em;
-  }
-  
   footer li {
 	margin: 0 14px;
   }
-}
-
-@media screen and (min-width: 600px) {
-
-	
-}
-
-@media screen and (min-width: 700px) {    
-
-}
-
-@media screen and (min-width: 950px) {
-
-
 }
 
 /* PORTRAIT TABLET */
@@ -255,7 +235,7 @@ footer h4 {
   and (min-device-width: 768px) 
   and (max-device-width: 1024px) 
   and (orientation: portrait) {
-      .section-work {
+      .section-gallery {
           min-height: 80vh;
       }
 }
@@ -264,7 +244,7 @@ footer h4 {
 @media only screen 
   and (device-width: 1366px) 
   and (orientation: landscape) {
-      .section-work {
+      .section-gallery {
           min-height: 80vh;
       }
 }
@@ -272,7 +252,7 @@ footer h4 {
 /* 4K SUPPORT */
 @media only screen 
   and (min-device-width: 2560px) {
-      .section-work {
+      .section-gallery {
           min-height: 80vh;
       }
 }
