--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,12 @@ footer h4 {
 	}
 }
 
+@media screen and (min-width: 1400px) {
+    .section-work {
+        padding: 28px 9% 0 9%;
+	}
+}
+
 
 /* ----------- L Laptop ----------- */
 @media screen 
