reverting text color

--- a/css/main.css
+++ b/css/main.css
@@ -196,8 +196,7 @@ footer h4 {
     bottom: 8px;
 	width: 100%;
 	padding-bottom: 6px;
-	color: #fff;
-    opacity: 0.5;
+	color: #a5b5c7;
 }
 
 /* ---- FEATURED WORK ----- */
