--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@ header {
     display: none;
     float: left;
     width: 100%;
-    background-color: #272f38;
+    background-color: #37404A;
     box-shadow: 0 2px 2px rgba(3, 15, 29, 0.5);
 }
 
