--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@ header {
     display: none;
     float: left;
     width: 100%;
-    background-color: #37404A;
+    background-color: #2d353e;
     box-shadow: 0 2px 2px rgba(3, 15, 29, 0.5);
 }
 
@@ -191,12 +191,12 @@ footer {
 
 footer h4 {
 	position: absolute;
-	font-weight: 600;
-	letter-spacing: 0.06em;
-	bottom: 8px;
+    font-weight: 600;
+    letter-spacing: 0.06em;
+    bottom: 8px;
 	width: 100%;
 	padding-bottom: 6px;
-  opacity: 0.5;
+    opacity: 0.5;
 	color: #fff;
 }
 
