--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ header {
 .title-text-darker {
     vertical-align: middle;
     opacity: 0.5;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 14px;
 }
 
@@ -339,6 +339,13 @@ footer h4 {
     
 }
 
+@media screen and (max-width: 1000px) {
+    .title-text-darker {
+
+    }
+    
+}
+
 @media screen and (min-width: 360px) {
     .header-title-left {
         font-size: 24px;
@@ -369,6 +376,8 @@ footer h4 {
     }
     */
 }
+
+
 
 @media screen and (min-width: 1200px) {
     header {
