Aligning the title text divider

--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,8 @@ header {
 }
 
 .title-divider {
+    position: relative;
+    top: -1px;
     vertical-align: middle;
     font-size: 22px;
     opacity: 0.5;
@@ -120,7 +122,6 @@ header {
 }
 
 .title-letter-medium {
-    
     font-size: 18px
 }
 
@@ -335,13 +336,6 @@ footer h4 {
     footer h4 {
         bottom: 10px;
         font-size: 0.8em;
-    }
-    
-}
-
-@media screen and (max-width: 1199px) {
-    .title-text-darker {
-        font-weight: 200;
     }
     
 }
