--- a/css/main.css
+++ b/css/main.css
@@ -123,8 +123,6 @@ header {
     font-size: 18px
 }
 
-
-
 .header-icon {
     margin-top: 12px;
     padding: 0 6px;
@@ -134,7 +132,6 @@ header {
 .desktop-nav {
     display: none;
     list-style: none;
-    
 }
 
 .desktop-nav li {
@@ -150,7 +147,6 @@ header {
 .desktop-nav li a:hover {
     color: #00BCD4;
 }
-
 
 .header-nav-icon {
     max-width: 40%;
@@ -252,12 +248,17 @@ footer h4 {
 
 /* ---- CONTACT ----- */
 
-.section-contact {
-    margin: 50px auto 0 auto;
-	padding: 20px 0;
-    list-style: none;
+main {
     background-color: #2d353e;
-    height: 100vh;
+    min-height: 100vh;
+}
+
+.section-contact {
+    background-color: #272f38;
+    margin: 50px auto 0 auto;
+	padding: 20px 0 10px 0;
+    list-style: none;
+    
 }
 
 .section-contact ul {
@@ -296,16 +297,16 @@ footer h4 {
 }
 
 .welcome-text-name {
-    height: 42px;
+    height: 3.1em;
 }
 
 .section-contact ul hr {
-    width: 182px;
+    width: 13.01em;
     margin: 0 auto;
 }
 
 .welcome-text-role {
-    height: 28px;
+    height: 2em;
 }
 
 .list-icons {
@@ -315,8 +316,67 @@ footer h4 {
 }
 
 .list-icons li {
-    margin-left: 26px;
+    margin-left: 12px;
 }
+
+.section-about,
+.section-software {
+    margin: 22px auto 0 auto;
+    padding: 0 9%;
+    min-width: 250px;
+    max-width: 1024px;
+}
+
+.section-about h1,
+.section-software h1 {
+    text-align: left;
+    color: #fff;
+    font-weight: 600;
+}
+.section-about hr,
+.section-software hr {
+    margin-bottom: 6px;
+}
+
+.section-about p,
+.section-software p {
+    text-align: left;
+    color: #fff;
+    font-family: Roboto, sans-serif;
+    font-size: 0.8em;
+    font-weight: 300;
+    letter-spacing: 0.08em;
+    line-height: 1.425em;
+}
+
+.section-software ul {
+    list-style: none;
+    margin: 22px 0 0 0;
+}
+
+.section-software li {
+    display: inline-flex;
+    width: 100%;
+    text-align: left;
+    margin: 0 0 20px 0;
+}
+
+.section-software img {
+    height: 40px;
+    width: 40px;
+}
+
+.zbrush-icon {
+    padding: 8px;
+    background-color: #fff;
+    border-radius: 10%;
+}
+
+.section-software p {
+    font-weight: 400;
+    margin: 10px 0 0 14px;
+}
+
 
 /* ---- FEATURED WORK FOOTER ---- */
 
@@ -447,6 +507,19 @@ footer h4 {
     
     .section-contact {
         margin: 66px auto 0 auto;
+    }
+    
+    .section-about,
+    .section-software {
+        margin-top: 36px;
+    }
+    
+    .section-about p,
+    .section-software p {
+        font-size: 0.875em;
+        font-weight: 300;
+        letter-spacing: 0.0875em;
+        line-height: 1.725em;
     }
     
     .contact-footer {
